# freeq-raven

./: .dockerignore  .env.example  .gitignore  AGENTS.md  Cargo.toml  Dockerfile.railway  Makefile  README.md  package-lock.json  package.json  railpack.json  railway.json
.github/workflows/: ci.yml
crates/freeq-av/: Cargo.toml
crates/freeq-av/src/: audio.rs  lib.rs  session.rs
crates/freeq-raven/: .gitignore  Cargo.toml  README.md
crates/freeq-raven/assets/: coin-preview-server.mjs  coin-preview.html
crates/freeq-raven/src/: alexandria.rs  ambient.rs  character_profile.rs  claude_agent.rs  decisions.rs  diagram.rs  identity.rs  imagegen.rs  irc.rs  lib.rs  main.rs  memory.rs  proactive.rs  qa.rs  social.rs  stt.rs  summary.rs  tts.rs  video.rs  video_coin.rs  video_particles.rs  vision.rs  vision_bridge.rs  whiteboard.rs
crates/freeq-raven/tests/: e2e_two_servers_test.rs  identity_test.rs  live_irc_freeq_at_test.rs
crates/freeq-raven/tests/common/: mod.rs
ops/: alexandria-instance-runbook.md
ops/systemd/: freeq-raven.service
patches/: freeq-raven-eliza.patch
scripts/: claude-agent-sidecar.mjs
tests/: claude-agent-sidecar-smoke.mjs  railway-wrapper-smoke.sh  raven-claude-runner-smoke.sh
