[package]
name = "freeq-raven"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "Raven — an agent that joins freeq chat and AV rooms, answers by voice, and delegates heavy work to local tools."

[lib]
name = "freeq_raven"
path = "src/lib.rs"

[[bin]]
name = "freeq-raven"
path = "src/main.rs"

[dependencies]
freeq-agent-kit = { git = "https://github.com/chad/freeq.git", rev = "0bd770bc91078c20d25f552995ca127f3fcfcbf3", package = "freeq-agent-kit" }
freeq-av = { path = "../freeq-av" }
# Identity + IRC + crypto for SASL
freeq-sdk = { git = "https://github.com/chad/freeq.git", rev = "0bd770bc91078c20d25f552995ca127f3fcfcbf3", package = "freeq-sdk", default-features = false, features = ["ring", "rustls-tls", "websocket"] }
ed25519-dalek = { version = "2", features = ["rand_core"] }
rand.workspace = true
bs58 = "0.5"

# iroh-live stays a direct dep: the video tile renders into its
# VideoSource / VideoFrame types, and `to_whisper_pcm` reads its
# AudioFormat.
iroh-live = { git = "https://github.com/n0-computer/iroh-live", rev = "edd9bcc530a615f3ab3a6919e96790a077905376", default-features = false, features = ["opus", "h264"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs"] }
url = "2"

# STT — whisper.cpp bindings, behind the `stt` feature because the
# build needs cmake + a C++ toolchain. Without the feature the bot
# compiles and runs but treats every audio window as empty (so the
# end-to-end IRC + MoQ + transcript-relay path is still testable with
# a synthetic STT impl).
whisper-rs = { version = "0.14", default-features = false, optional = true }

# Visuals — render the agent's video tile (audio-reactive presence +
# LLM-authored visual aids) as SVG, rasterized to RGBA frames. `image`
# decodes/resizes AI-generated backdrops; `base64` embeds them as SVG
# data URIs.
resvg = "0.45"
bytes = "1"
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"

# Optional particle-face renderer (ported avatar visuals) — selected at
# CLI via `--render-backend particles`. The SVG path remains the
# default and still owns scene cards, whiteboards, the ambient HUD chip,
# vision PiP, etc. — composite mode is future work.
ghostly = { git = "https://github.com/chad/ghostly", branch = "main" }

# Async + utility
tokio = { workspace = true }
anyhow = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
clap = { workspace = true }
reqwest = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
axum = { workspace = true }
dirs = "6"
chrono = "0.4"
# SQLite for the conversation-memory module. FTS5 powers the "she
# remembers" feature — past exchanges retrieved on each addressed
# question and injected into the LLM context.
rusqlite = { workspace = true }

[features]
default = []
stt = ["dep:whisper-rs"]

[dev-dependencies]
tempfile = "3"
tokio = { workspace = true, features = ["test-util"] }
freeq-server = { git = "https://github.com/chad/freeq.git", rev = "0bd770bc91078c20d25f552995ca127f3fcfcbf3", package = "freeq-server", default-features = false }

[lints]
workspace = true
